# Amphisbaena

./: .gitignore  highly_performing_conv_model.ckpt  pyproject.toml  readme.md  sweep.yml
amphisbaena/: cli.py  data.py  metrics.py  model.py  train.py  viz.py
